<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  tools:context="net.za.dyndns.gerd.deutschlandfunk.favoriten.WahlActivity">

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="40"
    android:orientation="horizontal"
    >
    <!-- Serien.java füllt das vertikale LinearLayout -->
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >

      <LinearLayout
        android:id="@+id/netz0Serie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="30"
        android:orientation="vertical"
        >
      </LinearLayout>

      <LinearLayout
        android:id="@+id/netz1Serie"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="50"
        android:orientation="vertical"
        >
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <!-- style="?android:attr/buttonBarStyle" für Trennstriche -->
    <Button
      android:id="@+id/dialogEditButton"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:text="@string/benutzeredit"
      />

    <Button
      android:id="@+id/dialogInfoButton"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:text="@string/benutzerinfo"
      />

    <Button
      android:id="@+id/dialogFrageButton"
      style="?android:attr/borderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="horizontal"
      android:text="@string/benutzerfrage"
      />
  </LinearLayout>

  <!--
      <EditText
          android:id="@+id/txt_your_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:imeOptions="actionDone"
        />

    <EditText
      android:id="@+id/editText"
      android:layout_width="match_parent"
      android:inputType="text"
      android:layout_height="wrap_content"/>
  -->

  <Button
    android:id="@+id/stopTaste"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    android:text="@string/taste1"
    />

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <Button
      android:id="@+id/buttonStop"
      android:layout_width="wrap_content"
      android:layout_weight="10"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/Stop"
      android:enabled = "true"
      />

    <Button
      android:id="@+id/buttonRück"
      android:layout_width="wrap_content"
      android:layout_weight="10"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/zurück"
      android:enabled = "true"
      />

    <Button
      android:id="@+id/buttonPause"
      android:layout_width="wrap_content"
      android:layout_weight="10"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/Pause"
      android:enabled = "true"
      />

    <Button
      android:id="@+id/buttonSpiel"
      android:layout_width="wrap_content"
      android:layout_weight="20"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/spielAb"
      android:enabled = "true"
      />

    <Button
      android:id="@+id/buttonVor"
      android:layout_width="wrap_content"
      android:layout_weight="10"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/vorwärts"
      android:enabled = "true"
      />
    <Button
      android:id="@+id/buttonLösche"
      android:layout_width="wrap_content"
      android:layout_weight="10"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:text="@string/lösche"
      android:enabled = "true"
      />
  </LinearLayout>

  <SeekBar
    android:id="@+id/SeekBar01"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="10"
    />

  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="6"
    >

    <TextView
      android:id="@+id/zeigeJetzt"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="13"
      android:orientation="horizontal"
      android:text="@string/zeigeJetzt"
      />

    <TextView
      android:id="@+id/zeigeDauer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="7"
      android:orientation="horizontal"
      android:text="@string/zeigeDauer"
      />
  </LinearLayout>

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="40"
    >

    <LinearLayout
      android:id="@+id/welcherTag"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
    </LinearLayout>
  </ScrollView>

</LinearLayout>
  <!--
  Vorher ohne Scroll:

    <LinearLayout
      android:id="@+id/welcherTag"
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:orientation="vertical"
      >
    </LinearLayout>

  Nachher mit Scroll:

    <ScrollView
      android:layout_width="fill_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      >

      <LinearLayout
        android:id="@+id/welcherTag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      </LinearLayout>
    </ScrollView>

    -->

  <!--
  <TextView
    android:id="@+id/textView1"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="3"
    android:text="@string/serie"
    />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:text="@string/tage"
    />

  -->
